# messanger

./: CMakeLists.txt
client/: CMakeLists.txt  login.cpp  login.h  message.cpp  message.h  message.ui  widget.cpp  widget.h  widget.ui
client/factory/: checkname.h  sendmessage.h
server/: CMakeLists.txt  main.cpp  server.cpp  server.h  user.h
server/factory/: acceptname.h  updatelist.h
